1999-08-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/Colorset.c (LoadColorset): fixed reading shape_mask into mask

	* fvwm/modconf.c (SendDataToModule): fixed sending the wrong colorset

1999-08-16  Mikhael Goikhman  <migo@homemail.com>

	* configure.in: produce utils/fvwm-menu-{xlock|directory|desktop}
	from utils/fvwm-menu-{xlock|directory|desktop}.in

1999-08-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/builtins.c (HandleColorset):
	* libs/Colorset.c (LoadColorset): fixed bug that caused colorsets 10
	and up not to work (parsed a hex as decimal).

1999-08-15  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/safemalloc.c (safecalloc): new function to use instead of
	calloc.

	* libs/Graphics.c (CreateTiledMaskPixmap): new function to for tiled
	shape masks

	* libs/Colorset.h:
	* libs/Colorset.c (LoadColorsetConditional):
	(DumpColorset): handle mask pixmap

	* libs/Graphics.c: fixed problem occuring with XQueryBestTile and my
	buggy XServer (XFree 3.3.3.1).

	* libs/Colorset.c (LoadColorset): check for NULL pointer

	* fvwm/events.c (HandleKeyPress):
	* fvwm/add_window.c (AddWindow):
	* fvwm/icons.c (CreateIconWindow):
	* fvwm/bindings.c (activate_binding): removed hack for SloppyFocus and
	ClickToFocus root key bindings.

	* fvwm/fvwm2.1: Added a comment on root key bindings with SloppyFocus
	and ClickToFocus

	* vms/README:
	* vms/config.h:
	* tests/purify/README (Instructions):
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/new-features:
	* libs/ColorUtils.c:

1999-08-14  Dominik Vogt  <dominik_vogt@gmx.de>

	* NEWS:
	* INSTALL.fvwm:
	* fvwm/ConfigFvwmDefaults:
	* fvwm/fvwm2.1:
	* fvwm/module_interface.c (PositiveWrite): renamed fvwm2 -> fvwm

	* fvwm/fvwm2.1: divided the commad description into sections
	some format changes

	* fvwm/menus.c: fixed drawing of VGardients on an 8 bit display with
	XFree 3.3.3.1