@@ -1,3 +1,9 @@
+1999-08-16  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>
+
+	* FvwmButtons/parse.c (expand_action): moved to parse.c
+
+	* FvwmButtons/FvwmButtons.c (expand_action): new function
+
 1999-08-15  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* FvwmTheme/FvwmTheme.c (parse_colorset): transparent background
